docs: AGENTS.md becomes the single knowledge base; slim CLAUDE.md
The two files duplicated conventions, structure, and commands — and had already
drifted (AGENTS.md still documented the pre-2026-08-08 ${VAR} resolution order,
env before system property; the code flips it). One source of truth:

- AGENTS.md absorbs: layer access rules, the user-facing API surface (@Internal
  mechanism, SPI list), dual-engine semantics + classpath constraint, test
  infrastructure tiers, bean validation; its ${VAR} order is corrected and the
  build commands gain `mvn install -DskipTests` + the mandatory build-contract
  note.
- CLAUDE.md keeps only the Claude-session delta: act workflow, CLI decision,
  publish runbook, pending items — with pointers to AGENTS.md for project
  knowledge and commands.